Closed Bug 1738613 Opened 4 years ago Closed 4 years ago

color-scheme-aware link colors for dark scheme wrong on windows

Categories

(Core :: CSS Parsing and Computation, defect)

defect

Tracking

()

RESOLVED FIXED
96 Branch
Tracking Status
firefox96 --- fixed

People

(Reporter: aja, Assigned: emilio)

References

Details

Attachments

(3 files)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:100.0) Gecko/20100101 Firefox/100.0

Steps to reproduce:

<meta name="color-scheme" content="dark"/>

Actual results:

Canvas/CanvasText for dark scheme are fine, matching:
browser.display.background_color.dark
browser.display.foreground_color.dark

LinkText/VisitedText/ActiveText are NOT matching
browser.anchor_color.dark
browser.visited_color.dark
browser.active_color.dark

Looks like VisitedText/ActiveText actually match the light scheme colors:
browser.visited_color
browser.active_color

LinkText looks like it actually matches Highlight

Expected results:

LinkText/VisitedText/ActiveText should match:
browser.anchor_color.dark
browser.visited_color.dark
browser.active_color.dark

Blocks: 1738584
Flags: needinfo?(emilio)
No longer blocks: 1738584
Depends on: 1525107
Flags: needinfo?(emilio)

This will make sure they're used on Windows for the dark color scheme.

Assignee: nobody → emilio
Status: NEW → ASSIGNED

This is just drive-by, I noticed we implement one color but not the
other which is unfortunate.

Depends on D129993

Severity: -- → S3
Pushed by ealvarez@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8afba3940af5 Provide generic dark hyperlink system colors. r=dholbert https://hg.mozilla.org/integration/autoland/rev/9d14c98c0b0e Implement MozNativevisitedhyperlinktext on GTK. r=stransky
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 96 Branch
Blocks: 2011761
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: