Bug 1738613 - Provide generic dark hyperlink system colors. r=dholbert

This will make sure they're used on Windows for the dark color scheme.

Differential Revision: https://phabricator.services.mozilla.com/D129993